2006-05-16  Christian Stimming <stimming@tuhh.de>

	* lib/libqof/qof/gnc-date.c (timespecCanonicalDayTime)
	(qof_print_date_buff, dateSeparator, gnc_timespec_last_mday)
	(gnc_timespec2dmy): Use localtime_r only when HAVE_LOCALTIME_R is
	defined. Might be undefined on some weird systems out there,
	e.g. windows/mingw32.

2006-05-15  Derek Atkins  <derek@ihtfp.com>

	* src/import-export/test/Makefile.am:
	  need to link against gnome-utils

2006-05-15  Joshua Sled  <jsled@asynchronous.org>

	* lib/libqof/qof/gnc-date.c (timespecCanonicalDayTime)
	(qof_print_date_buff, dateSeparator, gnc_timespec_last_mday) 
	(gnc_timespec2dmy): convert `localtime` to `localtime_r`, after
	seeing localtime fail (strange as it is...).

2006-05-15   Christian Stimming <stimming@tuhh.de>

	* doc/README.german: Updated German README which was horribly
	outdated.

	* doc/README.HBCI: Updated explanation of HBCI features.

2006-05-14  Chris Lyttle  <chris@wilddev.net>

	* NEWS: Added some text about the release.
	* configure.in: Change to version 1.9.6

r14050 | chris | 2006-05-14 17:30:22 -0400 (Sun, 14 May 2006) | 2 lines

   M /gnucash/trunk/src/engine/Transaction.c

   Disable Lots scrubbing, which is causing test-suite failures.

2006-05-14  Joshua Sled  <jsled@asynchronous.org>

	* packaging/gnucash-1.9.x.ebuild (DEPEND): Cleanups from Ed Catmur
	<ed@catmur.co.uk> for better Gentoo-iness, doc install,
	/usr/bin/gnucash-${version} symlink, .desktop install.

	* src/engine/gw-engine-spec.scm: expose gnc:book-get-template-group

	* src/report/standard-reports/general-journal.scm
	(general-journal-options-generator): Filter template
	transactions out of query; Bug#341609.

2006-05-14  Derek Atkins  <derek@ihtfp.com>

	* src/lib/libqof/qof/qofquery.h:
	  Fix the documentation of qof_query_merge for degenerate cases.

	* po/el.po: Updated Greek translation by Nikos Charonitakis
	  <nikosx@gmail.com>
	
r14038 | chris | 2006-05-14 07:59:39 -0400 (Sun, 14 May 2006) | 2 lines
