@@ -1,3 +1,8 @@
+2006-05-16  Derek Atkins  <derek@ihtfp.com>
+
+	* lib/libqof/qof/gnc-date.c:
+	  revert r14081 because we always have localtime_r.
+
 2006-05-16  Christian Stimming <stimming@tuhh.de>
 
 	* lib/libqof/qof/gnc-date.c (timespecCanonicalDayTime)
